If object is reference for 2 shrinkwraps, entering it`s edit mode crashes Blender. #78285

Closed
opened 2020-06-26 04:29:20 +02:00 by Vyacheslav Kobozev · 17 comments

Bisecting points to 0945a79ed1

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-24 21:51, hash: ec776f18ff
Worked: blender-2.90.0-ab8a6914317f-windows64.zip

Short description of error
Create a file using the steps shown below or download the .blend file. Select the sphere and enter edit mode and Blender should crash. You may need to enter edit mode a few times for this bug to occur.
2020-06-26_05-29-42.mp4
untitled1.blend

Original steps:
There is two shrinkwraps on two fingers. And if both enabled in viewport, I have crash, when I try to enter edit mode for hand.
Yes, tested with factory settings too, the same.
untitled.blend
2020-06-26_05-12-19.mp4

Bisecting points to 0945a79ed1 **System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-24 21:51, hash: `ec776f18ff` Worked: blender-2.90.0-ab8a6914317f-windows64.zip **Short description of error** Create a file using the steps shown below or download the .blend file. Select the sphere and enter edit mode and Blender should crash. You may need to enter edit mode a few times for this bug to occur. [2020-06-26_05-29-42.mp4](https://archive.blender.org/developer/F8644824/2020-06-26_05-29-42.mp4) [untitled1.blend](https://archive.blender.org/developer/F8644825/untitled1.blend) **Original steps:** There is two shrinkwraps on two fingers. And if both enabled in viewport, I have crash, when I try to enter edit mode for hand. Yes, tested with factory settings too, the same. [untitled.blend](https://archive.blender.org/developer/F8644817/untitled.blend) [2020-06-26_05-12-19.mp4](https://archive.blender.org/developer/F8644819/2020-06-26_05-12-19.mp4)

Added subscriber: @Vyach

Added subscriber: @Vyach

#78546 was marked as duplicate of this issue

#78546 was marked as duplicate of this issue

Okay. I reproduced it with simple file.
2020-06-26_05-29-42.mp4
untitled1.blend

Okay. I reproduced it with simple file. [2020-06-26_05-29-42.mp4](https://archive.blender.org/developer/F8644824/2020-06-26_05-29-42.mp4) [untitled1.blend](https://archive.blender.org/developer/F8644825/untitled1.blend)
Vyacheslav Kobozev changed title from Bugged file, Blender crashes: entering edit mode to object, that is reference for 2 shrinkwraps to If object is reference for 2 shrinkwraps, entering it`s edit mode crashes Blender. 2020-06-26 04:34:17 +02:00
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm.
Linux-5.4.0-7634-generic-x86_64-with-debian-bullseye
GTX 1050Ti
2.90.0 646ef49e197d

In some cases you'll have to enter edit mode multiple times for the crash to occur.

Will bisect now (e079bf6996 still produces errors for me).

# backtrace
/blender-2.90.0-62aa103d485f-linux64/blender(BLI_system_backtrace+0x20) [0x7d01100]
/blender-2.90.0-62aa103d485f-linux64/blender() [0xccf71a]
/lib/x86_64-linux-gnu/libc.so.6(+0x46210) [0x7f9c04e03210]
/blender-2.90.0-62aa103d485f-linux64/blender(BKE_mesh_recalc_looptri+0x54) [0xd37024]
/blender-2.90.0-62aa103d485f-linux64/blender(BKE_mesh_runtime_looptri_recalc+0xae) [0xd3899e]
/blender-2.90.0-62aa103d485f-linux64/blender(BKE_mesh_runtime_looptri_ensure+0x80) [0xd38ad0]
/blender-2.90.0-62aa103d485f-linux64/blender(BKE_bvhtree_from_mesh_get+0x283) [0xef5933]
/blender-2.90.0-62aa103d485f-linux64/blender(BKE_shrinkwrap_init_tree+0x81) [0xdaa411]
/blender-2.90.0-62aa103d485f-linux64/blender(shrinkwrapModifier_deform+0x146) [0xdabf06]
/blender-2.90.0-62aa103d485f-linux64/blender() [0x1196dfd]
/blender-2.90.0-62aa103d485f-linux64/blender() [0xed7df0]
/blender-2.90.0-62aa103d485f-linux64/blender() [0xed8ca5]
/blender-2.90.0-62aa103d485f-linux64/blender(makeDerivedMesh+0x8f) [0xeda12f]
/blender-2.90.0-62aa103d485f-linux64/blender(BKE_object_handle_data_update+0x3a0) [0xd62820]
/blender-2.90.0-62aa103d485f-linux64/blender(BKE_object_eval_uber_data+0x2f) [0xd62b2f]
/blender-2.90.0-62aa103d485f-linux64/blender() [0x17c10e2]
/blender-2.90.0-62aa103d485f-linux64/blender() [0x17c12b2]
/blender-2.90.0-62aa103d485f-linux64/blender() [0xf81aa3]
/blender-2.90.0-62aa103d485f-linux64/blender() [0x7d04d33]
/blender-2.90.0-62aa103d485f-linux64/blender() [0xf7e965]
/blender-2.90.0-62aa103d485f-linux64/blender() [0xf80035]
/blender-2.90.0-62aa103d485f-linux64/blender() [0xf81798]
/blender-2.90.0-62aa103d485f-linux64/blender() [0xf7a373]
/blender-2.90.0-62aa103d485f-linux64/blender() [0xf7b996]
/blender-2.90.0-62aa103d485f-linux64/blender() [0xf7bbd9]
/lib/x86_64-linux-gnu/libpthread.so.0(+0x9609) [0x7f9c054ff609]
/lib/x86_64-linux-gnu/libc.so.6(clone+0x43) [0x7f9c04edf103]
Can confirm. Linux-5.4.0-7634-generic-x86_64-with-debian-bullseye GTX 1050Ti 2.90.0 `646ef49e197d` In some cases you'll have to enter edit mode multiple times for the crash to occur. Will bisect now (e079bf6996fc still produces errors for me). ``` # backtrace /blender-2.90.0-62aa103d485f-linux64/blender(BLI_system_backtrace+0x20) [0x7d01100] /blender-2.90.0-62aa103d485f-linux64/blender() [0xccf71a] /lib/x86_64-linux-gnu/libc.so.6(+0x46210) [0x7f9c04e03210] /blender-2.90.0-62aa103d485f-linux64/blender(BKE_mesh_recalc_looptri+0x54) [0xd37024] /blender-2.90.0-62aa103d485f-linux64/blender(BKE_mesh_runtime_looptri_recalc+0xae) [0xd3899e] /blender-2.90.0-62aa103d485f-linux64/blender(BKE_mesh_runtime_looptri_ensure+0x80) [0xd38ad0] /blender-2.90.0-62aa103d485f-linux64/blender(BKE_bvhtree_from_mesh_get+0x283) [0xef5933] /blender-2.90.0-62aa103d485f-linux64/blender(BKE_shrinkwrap_init_tree+0x81) [0xdaa411] /blender-2.90.0-62aa103d485f-linux64/blender(shrinkwrapModifier_deform+0x146) [0xdabf06] /blender-2.90.0-62aa103d485f-linux64/blender() [0x1196dfd] /blender-2.90.0-62aa103d485f-linux64/blender() [0xed7df0] /blender-2.90.0-62aa103d485f-linux64/blender() [0xed8ca5] /blender-2.90.0-62aa103d485f-linux64/blender(makeDerivedMesh+0x8f) [0xeda12f] /blender-2.90.0-62aa103d485f-linux64/blender(BKE_object_handle_data_update+0x3a0) [0xd62820] /blender-2.90.0-62aa103d485f-linux64/blender(BKE_object_eval_uber_data+0x2f) [0xd62b2f] /blender-2.90.0-62aa103d485f-linux64/blender() [0x17c10e2] /blender-2.90.0-62aa103d485f-linux64/blender() [0x17c12b2] /blender-2.90.0-62aa103d485f-linux64/blender() [0xf81aa3] /blender-2.90.0-62aa103d485f-linux64/blender() [0x7d04d33] /blender-2.90.0-62aa103d485f-linux64/blender() [0xf7e965] /blender-2.90.0-62aa103d485f-linux64/blender() [0xf80035] /blender-2.90.0-62aa103d485f-linux64/blender() [0xf81798] /blender-2.90.0-62aa103d485f-linux64/blender() [0xf7a373] /blender-2.90.0-62aa103d485f-linux64/blender() [0xf7b996] /blender-2.90.0-62aa103d485f-linux64/blender() [0xf7bbd9] /lib/x86_64-linux-gnu/libpthread.so.0(+0x9609) [0x7f9c054ff609] /lib/x86_64-linux-gnu/libc.so.6(clone+0x43) [0x7f9c04edf103] ```
Member

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Member

Bisecting points to 0945a79ed1
CC @ideasman42

Bisecting points to 0945a79ed1 CC @ideasman42

Added subscribers: @BassamKurdali, @iss

Added subscribers: @BassamKurdali, @iss

Added subscribers: @Sergey, @brecht, @mont29

Added subscribers: @Sergey, @brecht, @mont29

reading a bit this code, it looks to me like a critically thread-unsafe one!

  • BKE_mesh_runtime_looptri_ensure use a specific, global (!!!) RW mutex. AND it only uses it to generate the data, the return a pointer to said data, on which there is absolutely no way to guarantee it won't be freed by another thread while being used?
  • BKE_bvhtree_from_mesh_get & co get and partially use the runtime mutex of the mesh.

BKE_mesh_wrapper_ensure_mdata is not protected at all. While being called fro threads. Like...

IMHO all those should use exclusively the mesh's runtime mutex (RW mutexes give very little benefit in general anyway). @brecht, @Sergey, what do you think?

Again one point where having re-entrant mutexes would have been nice, btw... keeping a proper sane usage of that runtime mutex is likely going to be challenging.

PS: note that 0945a79ed1 is not the only cause of the issue here, still get crash when it is reverted.

reading a bit this code, it looks to me like a critically thread-unsafe one! - `BKE_mesh_runtime_looptri_ensure` use a specific, global (!!!) RW mutex. **AND** it only uses it to generate the data, the return a pointer to said data, on which there is absolutely no way to guarantee it won't be freed by another thread while being used? - `BKE_bvhtree_from_mesh_get` & co get and partially use the runtime mutex of the mesh. # `BKE_mesh_wrapper_ensure_mdata` is not protected at all. While being called fro threads. Like... IMHO all those should use exclusively the mesh's runtime mutex (RW mutexes give very little benefit in general anyway). @brecht, @Sergey, what do you think? Again one point where having re-entrant mutexes would have been nice, btw... keeping a proper sane usage of that runtime mutex is likely going to be challenging. PS: note that 0945a79ed1 is not the only cause of the issue here, still get crash when it is reverted.

It is preferable to use the per-mesh mutex when possible.

However if a thread is going to create looptri data and then free it, then the mesh should not have been modified at all? The data can be stored in an array separate from the mesh and each thread can make their own copy and free it aftwards.

If the intent is to do lazy creation and keep it afterwards, then you need a mutex.

I find re-entrant mutexes very hard to understand, I would not use them at all.

It is preferable to use the per-mesh mutex when possible. However if a thread is going to create looptri data and then free it, then the mesh should not have been modified at all? The data can be stored in an array separate from the mesh and each thread can make their own copy and free it aftwards. If the intent is to do lazy creation and keep it afterwards, then you need a mutex. I find re-entrant mutexes very hard to understand, I would not use them at all.

General rule is to not modify someone's else data. Without this you will either run into issues like this, or will reduce occupancy of threads during evaluation.

The idea was always to extend datamask reported by modifiers to also extend it to what they need from operands. This will allow the "target" mesh to make sure looptri, bvh and what not is evaluated in the thread local to the corresponding mesh, without having threads wait on data.

For the freeing part i am confused. If data is supposed to be temp, then it should not be stored in the object at all. This is what Brecht already pointed out i think.

Safest fix would be:

  • "Disposable" data should be local to the thread who uses, not shared with others.
  • "Persistent" lazily initialized data is to be protected with object or mesh level lock

Longer term fix: communicate datamask to other objects via the dependency graph, prepare lazily initialzed data ahead of the time.

General rule is to not modify someone's else data. Without this you will either run into issues like this, or will reduce occupancy of threads during evaluation. The idea was always to extend datamask reported by modifiers to also extend it to what they need from operands. This will allow the "target" mesh to make sure looptri, bvh and what not is evaluated in the thread local to the corresponding mesh, without having threads wait on data. For the freeing part i am confused. If data is supposed to be temp, then it should not be stored in the object at all. This is what Brecht already pointed out i think. Safest fix would be: - "Disposable" data should be local to the thread who uses, not shared with others. - "Persistent" lazily initialized data is to be protected with object or mesh level lock Longer term fix: communicate datamask to other objects via the dependency graph, prepare lazily initialzed data ahead of the time.

This issue was referenced by e2e87efea2

This issue was referenced by e2e87efea28ce6acbb8bc13d1623735f8e6b4ff1

This issue was referenced by ade7603379

This issue was referenced by ade760337983ff06e5b26230dd744a2eeb60f366

This issue was referenced by 4e6975ffd6

This issue was referenced by 4e6975ffd6656fb9abbaa577fef0815666c6c808

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2020-07-29 17:39:54 +02:00
Thomas Dinges added this to the 2.90 milestone 2023-02-08 16:26:17 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78285
No description provided.